# PrompToProject

./: .env  .env.local.example  .gitignore  AGENTS.md  App.tsx  ENHANCEMENT_SUGGESTIONS.md  FEATURE_SUMMARY.md  ITERATIVE_GENERATION_GUIDE.md  MIGRATION.md  MULTI_LLM_PLAN.md  POCKETBASE_INTEGRATION.md  POCKETBASE_SECURITY.md  QUICKSTART.md  README.md  STITCH_WIREFRAME_PROMPT.md  UI_WIREFRAME.md  VALDI_MIGRATION.md  constants.ts  eslint.config.mjs  improvement_plan.md  index.css  index.html  linter.md  metadata.json  notes.md  package-lock.json  package.json  pocketbase_schema.md  repomix-output.xml  tailwind.config.js  task_plan.md  tsconfig.json  types.ts
agent-infra-docker/: pyproject.toml  requirements.txt
agent-infra-docker/agents/: agno_assist.py  web_agent.py
agent-infra-docker/app/: main.py
components/: AuthForm.tsx  ErrorBoundary.tsx  GenerationProgress.tsx  Layout.tsx  ProjectHistory.tsx  PromptForm.tsx  ResultsDisplay.tsx  SaveProjectDialog.tsx  Settings.tsx  Toast.tsx
components/icons/: Icons.tsx
contexts/: AuthContext.tsx  LLMSettingsContext.tsx
lib/: llmClient.ts  pocketbase.ts  utils.ts
my_valdi_app/: .eslint.rc  AGENTS.md  BUILD.bazel  WORKSPACE  package.json
my_valdi_app/modules/my_valdi_app/: BUILD.bazel
my_valdi_app/modules/my_valdi_app/src/: App.tsx  constants.ts  types.ts
scripts/: check-pocketbase.js  setup-valdi.sh
services/: authService.ts  geminiService.ts  generationService.ts  projectHistoryService.ts  promptBuilder.ts
types/: llm.ts
valdi-macos/: .bazelrc  AGENTS.md  BUILD.bazel  NDK_SETUP.md  WORKSPACE  bazel-bin  bazel-out  bazel-testlogs  bazel-valdi-macos
valdi-macos/modules/valdi-macos/: BUILD.bazel  tsconfig.json
valdi-macos/modules/valdi_macos/: BUILD.bazel  tsconfig.json
